2018-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/monitor.c (MagickMonitorFormatted): Serialize calls to
	the progress monitor so that the caller does not need to perform
	this serialization.
	(MagickMonitor): Serialize calls to the progress monitor so that
	the caller does not need to perform this serialization.  This
	function is now marked as deprecated.
	(InitializeMagickMonitor): New private function to initialize
	monitor functionality.
	(DestroyMagickMonitor): New private function to destroy monitor
	functionality.

2018-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Improve the efficiency of storing a
	GIF comment in order to avoid a DOS opportunity.  Fixes oss-fuzz
	11096 "graphicsmagick/coder_GIF_fuzzer: Timeout in
	graphicsmagick_coder_GIF_fuzzer". (Credit to OSS-Fuzz)

2018-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Makefile.PL.in: Use MAGICK_API_LIBS to obtain the
	list of libraries to use when linking.

	* configure.ac: OpenMP library is normally supplied due to a
	CFLAGS option so only supply it in cases where the CFLAGS option
	may be lost or it might not be used.  Otherwise the compiler may
	apply the library twice when linking.

2018-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove Ghostscript library support (--with-gslib)
	from configure script.  The 'HasGS' pre-processor defines which
	were enabled by this remain in the source code so it is still
	possible to use this library if absolutely necessary
	(e.g. CPPFLAGS=-DHasGS LIBS=-lgs).

	* tests/rwfile.tap: Test TIFF format with all supported
	compression options.

	* tests/{rwblob.c, rwfile.c} (main): Use StringToCompressionType()
	to parse compression option. Also consider requested compression
	algorithm when deciding if format is lossy.

	* coders/tiff.c (WriteTIFFImage): WebP compression needs
	PHOTOMETRIC_RGB. Fix wrong rows-per-strip calculation when using