@@ -38,6 +38,9 @@
 <p>2018-10-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/pixel_iterator.c (PixelIterateMonoModifyImplementation):
+Use atomic and flush rather than critical construct for a small
+speedup.</li>
 <li>magick/monitor.c (MagickMonitorFormatted): Serialize calls to
 the progress monitor so that the caller does not need to perform
 this serialization.
